# fwm-bot

./: .gitignore  Dockerfile  README.md  requirements.txt
.continue/rules/: editable-git-install-with-uv.md  uv-dependency-workflow.md
.github/workflows/: branches.yml  main.yml
app/: app.py  fwm-bot.yaml  pyproject.toml  requirements.txt
app/cogs/: inspire.py  reddit.py  seekingalphanews.py  stocks.py  twitch.py  wotd.py
app/cogs/utils/: timing.py
docs/: CONFIGURATION.md
kube/: create-ai-secret.sh  create-all-secrets.sh  create-brave-secret.sh  create-discord-token-secret.sh  create-gfycat-secret.sh  create-ghcr-secret.sh  create-google-secret.sh  create-groq-secret.sh  create-namespace.sh  create-ollama-secret.sh  create-reddit-secret.sh  create-steam-secret.sh  create-stock-secrets.sh  create-twitch-secret.sh  create-xai-secret.sh  deploy.sh  egroup-bot-deployment.yml  fwm-bot-deployment.yml
pycord-testing/: myclass.py
